   float ellipseWidth, float ellipseHeight, float ellipseAngleOffset)
Added org.lazywizard.lazylib.campaign.orbits.EllipticalOrbit:
 - Implementation of OrbitAPI that travels along an elliptical path
Changes to AIUtils:
 - Added getBestInterceptPoint(Vector2f point, float speed,
   CombatEntityAPI target) - all credit goes to Dark.Revenant
Changes to CollisionUtils:
 - Fixed getCollisionPoint() not properly updating the bounds facing/position
Changes to CombatUtils:
 - Fixed getFleetMember() returning null when a hulk is passed in
 - Added spawnShipOrWingDirectly(String variantId, FleetMemberType type,
   FleetSide side, float combatReadiness, Vector2f location, float facing)
   NOTE: This does not work in campaign using the vanilla FleetEncounterContext!
Changes to DrawUtils:
 - Added drawEllipse(float centerX, float centerY, float width, float height,
   float angleOffset, int numSegments, boolean drawFilled)
Changes to MathUtils:
 - isPointWithinCircle() now returns true for points along the circumference
 - Optimized getPointsAlongCircumference() and large numbers of points
 - Added getMidpoint(Vector2f point1, Vector2f point2)
Changes to StringUtils:
 - Fixed wrapString() appending a newline when the input didn't have one
 - Also fixed a rare bug with wrapString() where it wouldn't include the last
   segment of a broken-up word if it was the last word in the entire String

 1.8c (March 07, 2014)
=======================
Changes to VectorUtils:
 - Fixed rotate() and rotateAroundPivot() issues (they were using radians
   instead of degrees like every other Starsector/LazyLib method does)

 1.8b (March 07, 2014)
=======================
Added "enableCaching" to lazylib_settings.json, on by default
Changes to AIUtils:
 - getEnemiesOnMap() will now store the results for faster consecutive calls
   during the same frame if caching is enabled, also affects all other
   enemy-filtering methods as they use getEnemiesOnMap() internally
Changes to CollisionUtils: